<resources>
    <string name="app_name">TaskGo</string>
    <string name="empty"></string>
    <string name="test">N/A</string>

    <string name="btn_verification_gain">重新获取</string>





    <!--home模块-->
    <string name="txt_home_diy_task">自定义任务</string>
    <string name="txt_home_water_task">水任务</string>
    <string name="txt_home_lost_and_found_task">物品任务</string>
    <string name="txt_home_more_task">更多任务</string>
    <string name="toast_stay_tuned">敬请期待</string>
    <string name="txt_cancel">取消</string>
    <string name="txt_confirm">确认</string>
    <string name="hint_please_input_key_words">请输入关键字</string>


    <string name="title_water_task">送水任务</string>
    <string name="title_lost_and_found_task">物品任务</string>
    <string name="title_release_task">发布任务</string>
    <string name="title_lost">寻物启事</string>
    <string name="title_found">失物招领</string>
    <string name="txt_address_number">宿舍号：</string>
    <string name="txt_address_build">宿舍楼：</string>
    <string name="txt_water_task_type">取水形式:</string>
    <string name="txt_water_task_type_send">送水上门</string>
    <string name="txt_water_task_type_self">自取</string>

    <string name="txt_item_name">物品名称：</string>
    <string name="txt_lost_found_task_type">任务类型：</string>
    <string name="txt_item_photo">物品照片：</string>
    <string name="txt_lost_found_task_type_lost">寻物启事</string>
    <string name="txt_lost_found_task_type_found">失物招领</string>


    <string name="txt_task_information">备注信息:</string>
    <string name="hint_please_add_task_information">请添加备注信息</string>
    <string name="txt_release_time">发布时间 </string>
    <string name="btn_release_task">发布任务</string>
    <string name="btn_accept">接受</string>
    <string name="btn_accept_all">一键接受</string>
    <string name="txt_total_number">总数：</string>
    <string name="txt_total_money">合计 ¥</string>
    <string name="txt_nine_rmb">9</string>
    <string name="txt_eight_rmb">8</string>
    <string name="txt_zero_rmb">0</string>
    <string name="txt_no_task_information">无</string>
    <string name="toast_release_task_successful">发布任务成功</string>

    <string name="dialog_add_photo_from_album">从相册中选择</string>
    <string name="dialog_add_photo_from_camera">拍照</string>
    <string name="dialog_title_if_accept">是否接受该任务?</string>
    <string name="dialog_title_if_accept_all">是否接受全部任务?</string>
    <string name="dialog_message_remove_task">确认后将从任务列表消失</string>
    <string name="dialog_message_clear_list">确认后将清空列表</string>
    <string name="toast_accept_successful">接受任务成功</string>
    <string name="toast_accept_all_successful">一键接受成功</string>
    <string name="toast_no_task_to_accept">当前没有可接受的任务</string>

    <string name="title_my_accepted_task">我接受的任务</string>
    <string name="title_my_released_task">我发布的任务</string>

    <!--mine主页面-->
    <string name="btn_mine_release_task">我发布的任务</string>
    <string name="btn_mine_after_number">个</string>
    <string name="btn_mine_receive_task">我接收的任务</string>
    <string name="txt_mine_real_name">实名认证</string>
    <string name="txt_mine_feedback">意见反馈</string>
    <string name="btn_mine_remind_setting">提醒设置</string>
    <string name="btn_mine_edit">编辑资料</string>
    <string name="txt_mine_follow_title">我的关注</string>
    <string name="txt_mine_follow">关注</string>
    <string name="txt_mine_fans">粉丝</string>
    <string name="txt_mine_fans_title">我的粉丝</string>
    <string name="txt_mine_pleease_enter_feedback">请输入您的宝贵意见....</string>
    <string name="btn_mine_submmit">提交</string>
    <string name="txt_mine_real_name_top">请按照样例样式进行拍照，保证照片清晰</string>
    <string name="txt_mine_setting">系统设置</string>
    <string name="btn_mine_remind_push">推送提醒</string>
    <string name="btn_mine_remind_voice">声音提醒</string>
    <string name="btn_mine_remind_shock">震动提醒</string>
    <string name="btn_mine_change_password">修改密码</string>
    <string name="btn_mine_about">关于TaskGo</string>
    <string name="btn_mine_exchange_account">切换账号</string>
    <string name="btn_mine_exit_systom">退出系统</string>
    <string name="txt_about">关于TaskGo</string>
    <string name="txt_mine_edit_data" >个人信息</string>
    <string name="txt_mine_photo">头像</string>
    <string name="txt_mine_name">名字</string>
    <string name="txt_mine_gender">性别</string>
    <string name="txt_mine_phone">手机</string>
    <string name="txt_mine_birth">生日</string>
    <string name="txt_mine_wechat">微信号</string>
    <string name="txt_mine_qq">QQ</string>
    <string name="txt_mine_if_real_name">是否已经认证</string>
    <string name="txt_mine_edit_data_name">昵称修改</string>
    <string name="txt_gender_man">男</string>
    <string name="txt_gender_woman">女</string>
    <string name="txt_update_password_title">修改密码</string>
    <string name="txt_forget_password_title">忘记密码</string>
    <string name="txt_mine_old_password">旧密码</string>
    <string name="txt_mine_new_password">新密码</string>
    <string name="txt_mine_repeat_password">重复新密码</string>
    <string name="txt_mine_change_password_success">修改成功</string>
    <string name="txt_gender_unknown">未知</string>

    <string name="error_upload_image_filed">图片上传失败</string>


</resources>
