<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg_gray"
    android:orientation="vertical">

    <TextView
        android:id="@+id/btn_take_photo"
        style="@style/dialog_add_photo"
        android:text="@string/dialog_add_photo_from_camera" />

    <TextView
        android:id="@+id/btn_from_album"
        style="@style/dialog_add_photo"
        android:layout_marginTop="2dp"
        android:text="@string/dialog_add_photo_from_album" />

    <TextView
        android:id="@+id/btn_cancel"
        style="@style/dialog_add_photo"
        android:layout_marginTop="5dp"
        android:text="@string/txt_cancel"
        android:textColor="@color/txt_blue" />

</LinearLayout>