<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginLeft="30dp"
        android:text="@string/txt_mine_old_password"
        android:textSize="17sp"
        android:layout_marginTop="40dp"/>

    <EditText
        android:id="@+id/edit_old_psaaword"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:textSize="20dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/txt_mine_new_password"
        android:textSize="17sp"

        android:layout_marginLeft="30dp"
        android:layout_below="@id/edit_old_psaaword"
        android:layout_marginTop="40dp"/>

    <EditText
        android:id="@+id/edit_new_password"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginLeft="120dp"
        android:textSize="20dp"
        android:layout_below="@id/edit_old_psaaword"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:textSize="17sp"

        android:layout_marginLeft="30dp"
        android:text="@string/txt_mine_repeat_password"
        android:layout_below="@id/edit_new_password"
        android:layout_marginTop="40dp"/>

    <EditText
        android:id="@+id/edit_repeat_password"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:textSize="20dp"
        android:layout_marginLeft="120dp"
        android:layout_below="@id/edit_new_password"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btn_submmit_change"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:background="@color/btn_blue"
        android:layout_below="@id/edit_repeat_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"

        />

</RelativeLayout>