<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_gray"
        android:id="@+id/linearLayout"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@color/white">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/btn_mine_remind_push"
                android:textColor="@color/text_mine_button"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/switch_mine_remind_push"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="30dp"
                android:checked="true"
                android:src="@drawable/ic_mine_arrow" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="2dp"
            android:background="@color/white">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/btn_mine_remind_voice"
                android:textColor="@color/text_mine_button"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/switch_mine_remind_voice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="30dp"
                android:checked="true"
                android:src="@drawable/ic_mine_arrow" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="2dp"
            android:background="@color/white">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/btn_mine_remind_shock"
                android:textColor="@color/text_mine_button"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/switch_mine_remind_shock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="30dp"
                android:checked="true"
                android:src="@drawable/ic_mine_arrow" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlayout_mine_setting_change_password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:background="@color/white">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/btn_mine_change_password"
                android:textColor="@color/text_mine_button"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="11dp"
                android:src="@drawable/ic_mine_arrow" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlayout_mine_setting_about"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="0.5dp"
            android:background="@color/white">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/btn_mine_about"
                android:textColor="@color/text_mine_button"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="11dp"
                android:src="@drawable/ic_mine_arrow" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlayout_mine_exchange_account"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@color/white">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:text="@string/btn_mine_exchange_account"
                android:textColor="@color/text_mine_button"
                android:textSize="18sp" />


        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rlayout_mine_exit_systom"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="1dp"
            android:background="@color/white">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:text="@string/btn_mine_exit_systom"
                android:textColor="@color/text_mine_button"
                android:textSize="18sp" />


        </RelativeLayout>




    </LinearLayout>

</RelativeLayout>